[metadata]
name = geo-address
version = 0.1
author = Kristofer R. Söderström
author_email = kristofer.soderstrom@kultur.lu.se
description_file = README.md
keywords = spatial, geospatial, addresses, wos
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
	pandas
	numpy
	tqdm
	geopy
	pickle
